# Filterize

./: .gitignore  CLEANUP_REPORT.md  ENHANCED_AI_DETECTION_COMPLETE.md  ENHANCED_README.md  FINAL_PLATFORM_COMPLETE.md  MULTI_AI_INTEGRATION_COMPLETE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  VOICE_FEATURES_COMPLETE.md  WEBSITE_COMPLETE_FINAL.md  WORKFLOW.md  ai_chatbot.py  ai_content_analyzer.py  ai_detection.py  ai_integrated_server.py  ai_providers.py  check_root.py  comprehensive_test.py  enhanced_ai_integration.py  enhanced_media_detection.py  enhanced_server.py  enhanced_test.py  env.example  fast_integrated_server.py  fast_server.py  fastapi_server.py  final_demo.py  index.html  instant_launch.bat  instant_launch.ps1  instant_server.py  internet_fact_checker.py  internet_fact_checker_fixed.py  launch.py  lightning_server.py  local_model.py  media_detection.py  news_provider.py  openai_integration.py  (+23 more)
app.py/: app.py  train.py
frontend/: app.js  comparison-system.html  comparison-system.js  dashboard.html  demo.html  document-analysis-unified.html  document-analysis.html  (+41 more)
voice_module/media-literacy-voice-module/: README.md  pyproject.toml  requirements.txt  setup.cfg
voice_module/media-literacy-voice-module/docs/: architecture.md
voice_module/media-literacy-voice-module/scripts/: start.sh
voice_module/media-literacy-voice-module/src/: main.py
voice_module/media-literacy-voice-module/src/voice_module/: __init__.py  config.py  pipeline.py  stt.py  tts.py  utils.py
voice_module/media-literacy-voice-module/tests/: test_stt.py  test_tts.py
(+43 files in other folders)
