[tool.poetry]
name = "media-literacy-voice-module"
version = "0.1.0"
description = "An AI-powered media literacy assistant voice module."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
numpy = "^1.21"
scipy = "^1.7"
pydub = "^0.25.1"
speechrecognition = "^3.8.1"
gTTS = "^2.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"