[metadata]
name = media-literacy-voice-module
version = 0.1.0
description = A voice module for an AI-powered media literacy assistant.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/media-literacy-voice-module
license = MIT

[options]
packages = find:
install_requires =
    Flask
    Flask-Cors
    numpy
    scipy
    soundfile
    torch
    transformers

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    media-literacy-voice-module = main:main_function

[tool:pytest]
testpaths = tests
python_files = test_*.py
